# TweetChat

./: .gitignore  README.md  TweetChat_Project_Report.txt
Backend/: Makefile  chat.db  go.mod  go.sum  main.go  main_test.go  setup-firewall.bat
Backend/chat_logs/demo/: log.txt
Frontend/: Cargo.toml  README.md  TROUBLESHOOTING.md  index.html  serve-network.bat  serve-network.ps1
Frontend/src/: lib.rs  main.rs
