[package]
name = "leptos-chat"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
log = "0.4"
console_log = "1.0"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = ["Request", "RequestInit", "RequestMode", "Response", "WebSocket", "MessageEvent", "CloseEvent"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
